# boreal-api

./: .env.example  .gitignore  README.md  evaluation_analysis.md  evaluation_results_20250528_153844.csv  evaluation_results_20250528_174019.csv  graph.py  main.py  pyproject.toml  temp.py
app/: main.py
app/api/v1/: api.py
app/eval/: evaluation.py  generate_data.py
app/langgraph/: generation-prompt.txt  graph.py  prompts.py
app/model/: response.py
app/rag/: __init__.py  document_store.py  vector_store.py
app/utils/: constants.py  scrape-script-final.py  scrape-sitemap-jina.ipynb
db/: __init__.py  document_store.py  models.py  vector_store.py
rag/: __init__.py  document_store.py  models.py  vector_store.py
utils/: scrape.ipynb  utils.py
