[project]
name = "nestle-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.23.0",
    "bs4>=0.0.2",
    "langchain-azure-ai>=0.1.0",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.60",
    "langchain-openai>=0.3.17",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.4.5",
    "langsmith[otel]>=0.3.42",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.9.0",
]
ignore = ["F841"]
